# pairipfix-zygisk

./: .gitignore  .gitmodules  IMPLEMENTATION_PLAN.md  README.md  build.py  build.sh  plan.md  project-config.json
build-tools/: README.txt
helper/: build-dex.sh
helper/src/io/github/pairipfix/helper/: Anchor.java  Hooker.java  Resolver.java
native/: CMakeLists.txt
native/jni/: gate.cpp  gate.h  helper_dex.h  java_hooks.cpp  java_hooks.h  log.h  lsplant_init.cpp  lsplant_init.h  main.cpp  native_shim.cpp  native_shim.h  scrub.cpp  scrub.h
native/tests/: test_scrub.cpp
reference/: pairip_bypass.js
reference/pairipfix_lsposed/: README.md  settings.gradle.kts
reference/pairipfix_lsposed/app/: build.gradle.kts
reference/pairipfix_lsposed/app/src/main/: AndroidManifest.xml
reference/pairipfix_lsposed/app/src/main/assets/: xposed_init
reference/pairipfix_lsposed/app/src/main/java/io/github/ahmedmani/pairipfix/: BaseHook.java  mainHook.java
reference/pairipfix_lsposed/app/src/main/java/io/github/ahmedmani/pairipfix/hooks/: LicenseActivityBypass.java  LicenseClientBypass.java  LicenseResponseBypass.java  SignatureBypass.java
reference/pairipfix_lsposed/app/src/main/res/values/: arrays.xml  strings.xml
reference/pairipfix_lsposed/gradle/: libs.versions.toml
reference/pairipfix_lsposed/gradle/wrapper/: gradle-wrapper.properties
scripts/: install_module.sh
template/: module.prop
